# dev-productivity-agent

./: .devagent.yml.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
devagent/: __init__.py  audit.py  config.py  embeddings.py  llm.py
devagent/agents/: context.py  executor.py  graph.py  planner.py  retriever_node.py  state.py  synthesizer.py  write_gate.py
devagent/api/: dependencies.py  main.py
devagent/cli/: app.py  cli_config.py  client.py  render.py
devagent/db/: migrate.py  schema.sql  session.py
devagent/ingestion/: chunkers.py  fake_github.py  fetchers.py  github_client.py  pipeline.py
devagent/observability/: langfuse_setup.py
devagent/prompts/: loader.py
devagent/prompts/v1/: executor.txt  planner.txt  synthesizer.txt
devagent/prompts/v2/: executor.txt  planner.txt  synthesizer.txt
devagent/rag/: corpus.py  hybrid_retriever.py  validate.py
devagent/testing/: mock_llm.py
devagent/tools/: github_read.py  github_write.py  registry.py  schemas.py
eval/: cases.py  generate.py  harness.py  judge.py  mocks.py  runner.py  test_eval.py
eval/golden/: requests_golden.yaml  retrieval_pairs.yaml
fixtures/psf__requests/: commits.json  files.json  issues.json  meta.json
scripts/: build_fixtures.py
