[project]
name = "devagent"
version = "0.1.0"
description = "Developer Productivity Agent Platform — multi-agent system that turns developer queries into executed GitHub SDLC actions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "llama-index-core>=0.12.0",
    "llama-index-vector-stores-postgres>=0.4.0",
    "llama-index-embeddings-openai>=0.3.0",
    "openai>=1.55.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.8.0",
    "langfuse>=2.53.0",
]

[project.optional-dependencies]
eval = [
    "deepeval>=1.5.0",
    "pytest>=8.3.0",
]

[project.scripts]
devagent = "devagent.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devagent"]

[tool.pytest.ini_options]
testpaths = ["eval", "tests"]
addopts = "-v"
